# skill-repo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release-binaries.yml
docs/: RELEASE.md
scripts/: build_binary.py  cli.py  install-binary.ps1  install-binary.sh  install.py  nuitka_entry.py  post_commit_sync.py  sync_claude_marketplace.py  sync_commands.py  sync_skills_readme.py  upload.py
src/skill_repo/: __init__.py  _console.py  _templates.py  cli.py  config_manager.py  git_manager.py  interactive.py  metadata.py  platforms.py  services.py  skill_manager.py
src/skill_repo/_templates/: __init__.py  default_skill_repo_cli.md  root_readme.md
tests/: test_config_manager.py  test_git_manager.py  test_metadata.py  test_platforms.py  test_services.py  test_skill_manager.py  test_version.py
